[project]
name = "lclstream_api"
version = "0.9.0"
authors = [
  { name = "David M. Rogers", email ="predictivestatmech@gmail.com" },
  { name = "Cong Wang", email ="wangimagine@gmail.com" },
  { name = "David M. Rogers", email ="valmar@slac.stanford.edu" },
]
description = "Image streaming API for psana."
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = "MIT"
dependencies = [
    "fastapi>=0.136.3",
    "psik>=3.0.1",
    "pydantic>=2.13.4",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mpi4py>=4.1.2",
    "pyzmq>=26.0.0",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-aiohttp>=1.1.0",
    "pytest-asyncio>=1.4.0",
    "lclstream @ git+https://github.com/lclstream/lclstream.git",
    "ruff>=0.15.17",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
#include = ["lclstream_api*"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["lclstream_api"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
